[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "1"
path = "1/1.rs"
[[bin]]
name = "2"
path = "2/2.rs"
[[bin]]
name = "3"
path = "3/3.rs"
[[bin]]
name = "4"
path = "4/4.rs"
[[bin]]
name = "5"
path = "5/5.rs"
[[bin]]
name = "6"
path = "6/6.rs"
[[bin]]
name = "7"
path = "7/7.rs"
[[bin]]
name = "7-2"
path = "7/7-2.rs"
