[package]
name = "rust"
version = "0.1.0"
edition = "2021"
[profile.dev]
opt-level = 3
[profile.release]
debug = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.0"

[[bin]]
name = "1"
path = "1/1.rs"
[[bin]]
name = "2"
path = "2/2.rs"
[[bin]]
name = "3"
path = "3/3.rs"
[[bin]]
name = "4"
path = "4/4.rs"
[[bin]]
name = "5"
path = "5/5.rs"
[[bin]]
name = "6"
path = "6/6.rs"
[[bin]]
name = "7"
path = "7/7.rs"
[[bin]]
name = "7-2"
path = "7/7-2.rs"
[[bin]]
name = "8"
path = "8/8.rs"
[[bin]]
name = "9"
path = "9/9.rs"
[[bin]]
name = "10"
path = "10/10.rs"
[[bin]]
name = "11"
path = "11/11.rs"
[[bin]]
name = "12"
path = "12/12.rs"
[[bin]]
name = "13"
path = "13/13.rs"
[[bin]]
name = "14"
path = "14/14.rs"
[[bin]]
name = "15"
path = "15/15.rs"
[[bin]]
name = "16"
path = "16/16.rs"
[[bin]]
name = "17"
path = "17/17.rs"
[[bin]]
name = "18"
path = "18/18.rs"
[[bin]]
name = "19"
path = "19/19.rs"
[[bin]]
name = "20"
path = "20/20.rs"
[[bin]]
name = "21"
path = "21/21.rs"
[[bin]]
name = "22"
path = "22/22.rs"
[[bin]]
name = "23"
path = "23/23.rs"
[[bin]]
name = "24"
path = "24/24.rs"
[[bin]]
name = "25"
path = "25/25.rs"
